cleaned up setup_chart code to call at end of ng-repeat (introduced directive for that); added basic dnd functionality for monitor re-arranging

--- a/src/main/resources/static/css/application.css
+++ b/src/main/resources/static/css/application.css
@@ -74,6 +74,11 @@
 	transform: rotateY(180deg);
 }
 
+.droppable div.hovered {
+    border: 2px solid #777777;
+    border-style: dashed;
+}
+
 .chart, .liquidFillGaugeCircle, .liquidFillGaugeText, .liquidFillGaugeWaveText, .liquidFillGaugeWave {
     transition: fill .4s ease;
 }
