--- a/src/main/resources/static/css/application.css
+++ b/src/main/resources/static/css/application.css
@@ -74,8 +74,8 @@
 	transform: rotateY(180deg);
 }
 
-.droppable div.hovered {
-    border: 2px solid #777777;
+.droppable {
+    border: 1px solid #777777;
     border-style: dashed;
 }
 
