--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -149,9 +149,7 @@
                                     </select>
                                 </div>
                                 <div class="form-group" ng-show="mon.monitorType == 'script'">
-                                    <label for="monitor_script_{{mon.id}}">Script Name</label>
-                                    <textarea id="monitor_script_{{mon.id}}" class="form-control input-sm" title="Script Name" ng-model="mon.script">
-                                    </textarea>
+                                    <input id="monitor_script_{{mon.id}}" type="text" class="form-control input-sm" placeholder="Script Name" title="Script Name" ng-model="mon.script" />
                                 </div>
                                 <div class="form-group" ng-show="mon.monitorType == 'script'">
                                     <label for="monitor_parser_{{mon.id}}">Output Parser</label>
@@ -179,7 +177,7 @@
                                 <div class="form-group">
                                     <label for="monitor_interval_{{mon.id}}">Interval</label>
                                     <select id="monitor_interval_{{mon.id}}" class="form-control input-sm" title="Interval" ng-model="mon.interval">
-                                        <option value="2s">2 seconds</option>
+                                        <option value="5s">2 seconds</option>
                                         <option value="10s">10 seconds</option>
                                         <option value="30s">30 seconds</option>
                                         <option value="1m">1 minute</option>
