finally got bar chart to look good with all the basic functionality working and parameterized

--- a/src/main/resources/static/css/application.css
+++ b/src/main/resources/static/css/application.css
@@ -127,11 +127,7 @@
 }
 
 .chart .barChart.bar {
-    fill: steelblue;
-}
-
-.chart .barChart.bar:hover {
-    fill: brown;
+    fill: black;
 }
 
 .chart .axis {
