--- a/src/main/resources/static/css/application.css
+++ b/src/main/resources/static/css/application.css
@@ -83,6 +83,14 @@
     border-style: dashed;
 }
 
+.disabled {
+    opacity: 0.65;
+}
+
+.success {
+    color: #77DD77;
+}
+
 .status, .status-box, .status-label {
     transition: fill .4s ease;
 }
