--- a/src/main/resources/static/css/application.css
+++ b/src/main/resources/static/css/application.css
@@ -84,11 +84,15 @@
 }
 
 .disabled {
-    opacity: 0.65;
+    opacity: 0.5;
 }
 
 .success {
     color: #77DD77;
+}
+
+.failure {
+    color: #DD7777;
 }
 
 .status, .status-box, .status-label {
